# SC_MPIClient

./: CMakeLists.txt  README.md
custom-build/: 0penCMD.bat  Build_lmsmpi.bat  CMakeCache.txt  Makefile  cmake_install.cmake
custom-build/src/: Makefile  cmake_install.cmake  dtu_we_controller_bladed.mod  rosco.mod  rosco_types.mod  scclientsubs.mod
src/: CMakeLists.txt  SCClientSubs.f90  SCClient_DISCON.f90  YawAngleFromFile.f90  scclientsubs.mod  yawanglefromfile.mod
utils/: CMakeLists.txt
